--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\IR LAB\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\as\\Anaconda3\\python.exe",
 }
